Fix button stickiness on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -134,6 +134,13 @@ main {
 	opacity: 0;
 }
 
+@media (hover: none) {
+	.btn:hover, .btn:active {
+		background-color: #f8f9fa !important;
+		border-color: #f8f9fa !important;
+	}	
+}
+
 @keyframes walkinAnim {
 	0% {
 		left: -50vw;
